# OADino

./: .gitignore  README.md  VAE16_MNIST_training.ipynb  VAE64_MNIST_training.ipynb  evaluation.ipynb  evaluation_100_embeddings_100_queries.ipynb  evaluation_5010_embeddings_510_queries.ipynb  final_evaluation.ipynb  main.py  pyproject.toml  requirements.txt  test.ipynb  training_loop.py  training_loop_improved.py  training_loop_initial_testing.py  visualisation_postprocess.ipynb  visualisation_preprocess.ipynb
evals/: evaluation_400_embeddings_40_queries_VAE16_20epochs.ipynb  finals_evaluation_10020_embeddings_1020_queries_VAE16.ipynb  finals_evaluation_10020_embeddings_1020_queries_VAE64.ipynb  finals_evaluation_400_embeddings_40_queries_VAE16.ipynb  visualisation_preprocess.ipynb
oadino/: clevr.py  data.py  embeddings.py  models.py  training.py
oadino/dataset/single/: CLEVR_single_scenes.json
runs/CLEVR_CLEVRTex_train_1K_224_vits14_VAE16_20260213_112436/: config.json
runs/CLEVR_CLEVRTex_train_1K_224_vits14_VAE16_20260213_112436/logs/: events.out.tfevents.1770978276.fedora.example.org.29922.0
runs/CLEVR_CLEVRTex_train_4K_224_VAE16_20260213_001218/: config.json
runs/CLEVR_CLEVRTex_train_4K_224_VAE16_20260213_001218/logs/: events.out.tfevents.1770937938.fedora.example.org.71930.0
runs/CLEVR_CLEVRTex_train_4K_224_VAE16_20260213_143605/: config.json
runs/CLEVR_CLEVRTex_train_4K_224_VAE16_20260213_211210/: config.json
runs/CLEVR_CLEVRTex_train_4K_224_VAE64_20260213_221018/: config.json
runs/CLEVR_train_4K_224_20260202_210355/: config.json
runs/CLEVR_train_4K_224_20260202_210355/logs/: events.out.tfevents.1770062635.fedora.example.org.5734.0
(+1029 files in other folders)
