[project]
name = "oadino"
version = "0.1.0"
description = "Implementation of the Oh-A-DINO ICLR 2026 paper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "transformers>=4.57.3",
  "datasets>=4.5.0"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
